--- a/src/components/card.css
+++ b/src/components/card.css
@@ -6,6 +6,10 @@
   box-shadow: 0px 1px 2px 0px hsla(0, 0%, 0%, 0.44);
 }
 
+a.card {
+  display: block;
+}
+
 .card header {
   position: relative;
   min-height: 30vh;
